deployment/stg/nginx-static/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-static-container
