deployment/stg/nginx-static/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-static-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - static.test.jetselliot.com
      secretName: nginx-static-issuer
  rules:
    - host: "static.test.jetselliot.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-static-service
                port:
                  number: 80
